tests/negative/typecheck/addr_cast_mutability.orng
// ptr_cast_mutability.orng:7:32: error: cannot cast away mutability
//     let y: &mut Int = @addr_cast(&x)
//                               ^
// 
fn main() -> Int {
    let x = 4
    let y: &mut Int = @addr_cast(&x)
    y^
}
